--- a/app.json
+++ b/app.json
@@ -24,6 +24,20 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-font"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "1882632c-730e-436a-83b3-c397a460f691"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/1882632c-730e-436a-83b3-c397a460f691"
     }
   }
 }
