--- a/package.json
+++ b/package.json
@@ -9,10 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.7",
+    "@expo-google-fonts/press-start-2p": "^0.4.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.0.1",
+    "@react-navigation/bottom-tabs": "6",
+    "@react-navigation/native": "6",
+    "@react-navigation/native-stack": "6",
+    "@reduxjs/toolkit": "^2.9.0",
+    "expo": "54.0.20",
+    "expo-av": "^16.0.7",
+    "expo-font": "14.0.9",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.7",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.9.3"
+  }
 }
